--- a/components/Imgenreverse.css
+++ b/components/Imgenreverse.css
@@ -19,12 +19,12 @@
 
 /* Elemento que realiza el volteo */
 .flipper {
-  width: 100%;
+  width: auto;
   height: 100%;
   transition: transform 0.6s; /* Duración del giro */
   transform-style: preserve-3d; /* Preserva el efecto 3D */
   position: relative;
-  background-color: #333;
+  background-color: transparent;
 }
 
 /* Mostrar el giro al hacer hover */
@@ -62,7 +62,7 @@
 }
 
 .imagen-projects {
-  @apply object-fill max-h-[254px] h-max max-[1280px]:max-h-[230px];
+  @apply max-h-[254px] h-max max-[1280px]:max-h-[230px];
   @apply max-[1024px]:max-h-[145px] max-[768px]:max-h-[254px] max-[581px]:max-h-[200px];
   @apply max-[485px]:max-h-[160px] h-full;
 }
